Add about me section

--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -9,6 +9,7 @@
 @use 'links';
 @use 'main-navigation';
 @use 'page-header';
+@use 'about-me';
 @use 'staging';
 @use 'projects';
 @use 'projects-external';
