--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="inner-wrapper">
             <div class="container">
-                <div class="copyright">&copy; All rights reserved by Dawid Oleksiuk</div>
+                <div class="copyright">&copy; {{ dateFormat "2006" now  }} All rights reserved by Dawid Oleksiuk</div>
                 {{ partial "social-links.html" . }}
             </div>
         </div>
