Update and extend meta tags

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="format-detection" content="telephone=no">
 
-    <meta property="og:title" content="Blog" >
+    <meta name="author" content="Dawid Oleksiuk">
+    <meta name="description" content="Discover my Portfolio to get information about me and also inspiration.">
+    <meta property="og:title" content="AkaLientesS" >
     <meta property="og:type" content="website" >
-    <meta property="og:description" content="Discover my Blog to get information about me and also inspiration" >
+    <meta property="og:description" content="Discover my Portfolio to get information about me and also inspiration." >
     <meta property="og:locale" content="pl_PL" >
+    <meta property="og:image" content="/logo1.png">
+    <meta property="og:url" content="https://akalientess.netlify.app/">
     <meta property="og:locale:alternate" content="en_GB" >
     <link rel="icon" type="image/png" href="{{ (resources.Get "favicon.png").RelPermalink }}">
     <link rel="apple-touch-icon" href="{{ (resources.Get "favicon.png").RelPermalink }}">
