Add with to about me images

--- a/assets/src/styles/about-me/_styles.scss
+++ b/assets/src/styles/about-me/_styles.scss
@@ -112,6 +112,7 @@
         width: 100%;
         img {
             object-fit: cover;
+            width: 100%;
         }
     }
     .section-text {
