Add inner-wrapper to main navigation

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,45 +1,47 @@
 <header class="page-header">
     <div class="wrapper">
-        <nav class="main-navigation">
-            <a href="#">
-                <img src="{{ (resources.Get "build/logo1.png").RelPermalink }}" alt="Logo" class="logo">
-            </a>
-            <button class="button-menu" data-button-menu>
-                <div>
-                    <span class="first-label"></span>
-                    <span class="second-label"></span>
-                    <span class="third-label"></span>
-                </div>
-            </button>
-            <div class="mobile-animation" data-mobile-container-animation></div>
-            <div class="container" data-navigation-container>
-                <button class="button-close" data-button-close>
-                    <span class="first-label"></span>
-                    <span class="second-label"></span>
+        <div class="inner-wrapper">
+            <nav class="main-navigation">
+                <a href="#">
+                    <img src="{{ (resources.Get "build/logo1.png").RelPermalink }}" alt="Logo" class="logo">
+                </a>
+                <button class="button-menu" data-button-menu>
+                    <div>
+                        <span class="first-label"></span>
+                        <span class="second-label"></span>
+                        <span class="third-label"></span>
+                    </div>
                 </button>
-                <ul class="home-links">
-                    <li class="home">
-                        <a href="#" class="link">Home</a>
-                    </li>
-                    <li>
-                        <a href="#" class="link">Projects</a>
-                    </li>
-                    <li>
-                        <a href="#" class="link">Contact</a>
-                    </li>
-                </ul>
-                <ul class="social-links">
-                    <li>
-                        <a href="#" class="link">Github</a>
-                    </li>
-                    <li>
-                        <a href="#" class="link">Twitter</a>
-                    </li>
-                    <li>
-                        <a href="#" class="link">Facebook</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                <div class="mobile-animation" data-mobile-container-animation></div>
+                <div class="container" data-navigation-container>
+                    <button class="button-close" data-button-close>
+                        <span class="first-label"></span>
+                        <span class="second-label"></span>
+                    </button>
+                    <ul class="home-links">
+                        <li class="home">
+                            <a href="#" class="link">Home</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Projects</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Contact</a>
+                        </li>
+                    </ul>
+                    <ul class="social-links">
+                        <li>
+                            <a href="#" class="link">Github</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Twitter</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Facebook</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
 </header>
