Add new about me navigation link and linked links to sections

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,7 +23,10 @@
                             <a href="#" class="link">Home</a>
                         </li>
                         <li>
-                            <a href="#" class="link">Projects</a>
+                            <a href="#about-me" class="link">About Me</a>
+                        </li>
+                        <li>
+                            <a href="#projects" class="link">Projects</a>
                         </li>
                         <li>
                             <a href="#" class="link">Contact</a>
