--- a/layouts/partials/sections/about-me.html
+++ b/layouts/partials/sections/about-me.html
@@ -1,4 +1,4 @@
-<section class="section about-me">
+<section class="section about-me" id="about-me">
     <div class="wrapper">
         <ul>
         {{- range $index, $value := (where .Site.RegularPages "Type" "facts") -}}
