--- a/layouts/partials/sections/projects.html
+++ b/layouts/partials/sections/projects.html
@@ -1,4 +1,4 @@
-<section class="section projects">
+<section class="section projects" id="projects">
     <div class="wrapper">
         <div class="mask long-text">
             <div data-overlay></div>
