--- a/assets/src/styles/icons/_variables.scss
+++ b/assets/src/styles/icons/_variables.scss
@@ -2,3 +2,9 @@ $icon-half-moon: "\e900";
 $icon-github: "\eab0";
 $icon-linkedin: "\e902";
 $icon-twitter: "\e901";
+$icon-mysql: "\e906";
+$icon-php: "\e903";
+$icon-symfony: "\e904";
+$icon-js: "\e905";
+$icon-html: "\eae5";
+$icon-css: "\eae6";
