--- a/assets/src/styles/main.scss
+++ b/assets/src/styles/main.scss
@@ -10,6 +10,7 @@
 @use 'main-navigation';
 @use 'page-header';
 @use 'about-me';
+@use 'technologies';
 @use 'staging';
 @use 'projects';
 @use 'projects-external';
