Improved mask animation

--- a/assets/src/styles/about-me/_styles.scss
+++ b/assets/src/styles/about-me/_styles.scss
@@ -83,6 +83,7 @@
         }
     }
     .mask-about-me {
+        width: unset;
         position: relative;
         overflow: hidden;
         .overlay {
