--- a/layouts/partials/sections/projects.html
+++ b/layouts/partials/sections/projects.html
@@ -1,6 +1,6 @@
 <section class="section projects" id="projects">
     <div class="wrapper">
-        <div class="mask long-text">
+        <div class="mask long-text" data-overlay>
             <div data-overlay></div>
             <h2 class="h2 headline">My Projects</h2>
         </div>
