--- a/layouts/partials/sections/staging.html
+++ b/layouts/partials/sections/staging.html
@@ -3,15 +3,15 @@
     <div class="wrapper">
         <div class="inner-wrapper">
             <div class="container">
-                <div class="mask">
+                <div class="mask" data-overlay>
                     <div data-overlay></div>
                     <h1 class="h1 headline">AkaLientesS</h1>
                 </div>
-                <div class="mask">
+                <div class="mask" data-overlay>
                     <div data-overlay></div>
                     <h2 class="h5 headline author">Created by Dawid Oleksiuk</h2>
                 </div>
-                <div class="mask long-text">
+                <div class="mask long-text" data-overlay>
                     <div data-overlay></div>
                     <h3 class="h5 headline">Hey! I'm Dawid. I'm Fullstack Developer who is building Websites with passion.</h3>
                 </div>
