--- a/layouts/partials/sections/about-me.html
+++ b/layouts/partials/sections/about-me.html
@@ -3,21 +3,21 @@
         <ul class="fact-list">
         {{- range $index, $value := (where .Site.RegularPages "Type" "facts") -}}
             <li class="fact">
-                <div class="mask mask-about-me--head">
+                <div class="mask mask-about-me--head" data-overlay>
                     <div data-overlay></div>
                     <h2 class="h4 headline">About me</h2>
                 </div>
                 <div class="content-wrapper">
                     <div class="container">
-                        <div class="mask mask-about-me--second-head">
+                        <div class="mask mask-about-me--second-head" data-overlay>
                             <div data-overlay></div>
                             <h3 class="h2 headline">Fact 0{{ add $index 1}}</h3>
                         </div>
-                        <div class="mask title">
+                        <div class="mask title" data-overlay>
                             <div data-overlay></div>
                             <h3 class="h3 headline">{{ .Title }}</h3>
                         </div>
-                        <div class="mask-about-me">
+                        <div class="mask-about-me" data-overlay>
                             <div data-overlay></div>
                             <div class="content">{{ .Content }}</div>
                         </div>
