Fixed headlines margin in mobile view

--- a/assets/src/styles/about-me/_styles.scss
+++ b/assets/src/styles/about-me/_styles.scss
@@ -20,14 +20,18 @@
             &:nth-child(even) {
                 .mask-about-me {
                     &--second-head {
-                        margin: {
-                            left: auto;
+                        @include susanoo.breakpoint(medium) {
+                            margin: {
+                                left: auto;
+                            }
                         }
                     }
                 }
                 .title {
-                    margin: {
-                        left: auto;
+                    @include susanoo.breakpoint(medium) {
+                        margin: {
+                            left: auto;
+                        }
                     }
                 }
                 .container {
