Add functionality to section links on mobile view

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,16 +20,16 @@
                     </button>
                     <ul class="home-links">
                         <li class="home">
-                            <a href="#" class="link">Home</a>
+                            <a href="#" class="link" data-nav-link>Home</a>
                         </li>
                         <li>
-                            <a href="#about-me" class="link">About Me</a>
+                            <a href="#about-me" class="link" data-nav-link>About Me</a>
                         </li>
                         <li>
-                            <a href="#projects" class="link">Projects</a>
+                            <a href="#projects" class="link" data-nav-link>Projects</a>
                         </li>
                         <li>
-                            <a href="#" class="link">Contact</a>
+                            <a href="#" class="link" data-nav-link>Contact</a>
                         </li>
                     </ul>
                     <ul class="social-links">
