--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -29,7 +29,7 @@
                             <a href="#projects" class="link" data-nav-link>Projects</a>
                         </li>
                         <li>
-                            <a href="#" class="link" data-nav-link>Contact</a>
+                            <button class="link" data-nav-link data-nav-contact>Contact</button>
                         </li>
                     </ul>
                     <ul class="social-links">
