--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,11 +6,11 @@
                     <img src="{{ (resources.Get "build/logo1.png").RelPermalink }}" alt="Logo" class="logo">
                 </a>
                 <button class="button-menu" data-button-menu>
-                    <div>
+                    <span class="line-container">
                         <span class="first-label"></span>
                         <span class="second-label"></span>
                         <span class="third-label"></span>
-                    </div>
+                    </span>
                 </button>
                 <div class="mobile-animation" data-mobile-container-animation></div>
                 <div class="container" data-navigation-container>
