Improved technologies list view on Desktop and Mobile

--- a/assets/src/styles/about-me/_styles.scss
+++ b/assets/src/styles/about-me/_styles.scss
@@ -43,9 +43,11 @@
                 .image-container {
                     left: -50%;
                 }
-                .technology {
-                    margin: {
-                        left: auto;
+                @include susanoo.breakpoint(medium) {
+                    .technology {
+                        margin: {
+                            left: auto;
+                        }
                     }
                 }
             }
