--- a/layouts/partials/social-links.html
+++ b/layouts/partials/social-links.html
@@ -1,4 +1,4 @@
-<ul class="social-list">
+<ul class="social-list" data-second-overlay>
     <li>
         <a href="#" class="github">
             <span>Github</span>
