--- a/assets/src/styles/main-navigation/_styles.scss
+++ b/assets/src/styles/main-navigation/_styles.scss
@@ -4,12 +4,17 @@
 @use '../icons' as icon;
 
 .main-navigation {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     min: {
         height: 10vh;
     }
+    top: susanoo.rem-calc(-200);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s linear 1s;
     .mobile-animation {
         visibility: hidden;
         width: 100%;
