--- a/assets/src/styles/social-links/_styles.scss
+++ b/assets/src/styles/social-links/_styles.scss
@@ -7,8 +7,7 @@
     @include list.reset-list();
     display: grid;
     align-content: center;
-    position: sticky;
-    top: 1rem;
+    position: relative;
     height: 100%;
     margin: {
         left: auto;
