--- a/assets/src/styles/staging/_styles.scss
+++ b/assets/src/styles/staging/_styles.scss
@@ -34,4 +34,15 @@
             position: 5% 30%;
         }
     }
+    .social-list {
+        bottom: susanoo.rem-calc(-200);
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.5s linear 1s;
+        &.is-revealed {
+            bottom: 0;
+            opacity: 1;
+            visibility: visible;
+        }
+    }
 }
