--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="page-header">
+<header class="page-header" data-second-overlay>
     <div class="wrapper">
         <div class="inner-wrapper">
             <nav class="main-navigation">
