Adjust CSS output on social links

--- a/assets/src/styles/social-links/_styles.scss
+++ b/assets/src/styles/social-links/_styles.scss
@@ -23,7 +23,7 @@
     a {
         text-decoration: none;
         &::before {
-            @include susanoo.icon(null, true);
+            @include susanoo.icon(null, false);
             color: variables.$icon-color;
             padding: susanoo.rem-calc(16);
             font: {
