Add new next section button on staging

--- a/assets/src/styles/icons/_variables.scss
+++ b/assets/src/styles/icons/_variables.scss
@@ -1,4 +1,3 @@
-$icon-half-moon: "\e900";
 $icon-github: "\eab0";
 $icon-linkedin: "\e902";
 $icon-twitter: "\e901";
@@ -8,3 +7,4 @@ $icon-symfony: "\e904";
 $icon-js: "\e905";
 $icon-html: "\eae5";
 $icon-css: "\eae6";
+$arrow-down: "\e900";
