--- a/layouts/partials/sections/staging.html
+++ b/layouts/partials/sections/staging.html
@@ -19,4 +19,7 @@
         </div>
         {{ partial "social-links.html" . }}
     </div>
+    <div class="start-link" data-second-overlay>
+        <a href="#about-me"></a>
+    </div>
 </section>
