Update content on sections

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -7,8 +7,9 @@
             </button>
             <h2 class="h4 headline">Short Introduction</h2>
             <div class="content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium asperiores aspernatur, consectetur dolorum ducimus ex
-                excepturi itaque iusto libero natus pariatur quae quaerat quasi quibusdam repellendus saepe sit ullam?
+                Hi :) I'm Dawid Front-end and Backend Developer (Fullstack). I'm 22 Year old and I'm currently working as Azubi
+                in Germany Company. I enjoy playing competitive games like League of Legends or Counter-Strike, in other words I'm a Gamer :D.
+                I also spent like half year on Sport and I also try to eat healthy but eating healthy for me doesn't work at all :sweat_smile:
             </div>
             <div class="mail">
                 If you want to Contact me through E-Mail then please use this one: <a href="mailto:dawidoleksiuk@wp.pl" class="link">Send me Mail</a>
