--- a/layouts/partials/social-links.html
+++ b/layouts/partials/social-links.html
@@ -1,16 +1,16 @@
 <ul class="social-list" data-second-overlay>
     <li>
-        <a href="#" class="github">
+        <a href="https://github.com/shadown125" rel="external noopener" target="_blank" class="github">
             <span>Github</span>
         </a>
     </li>
     <li>
-        <a href="#" class="twitter">
+        <a href="https://twitter.com/DawidOleksiuk" rel="external noopener" target="_blank" class="twitter">
             <span>Twitter</span>
         </a>
     </li>
     <li>
-        <a href="#" class="linkedin">
+        <a href="https://www.linkedin.com/in/dawid-ol-2478311a4/" rel="external noopener" target="_blank" class="linkedin">
             <span>Linkedin</span>
         </a>
     </li>
