Add loading animation

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,6 @@
 {{ define "content" }}
 
+    {{ partial "loading-mask.html" . }}
     {{ partial "sections/about-me.html" . }}
     {{ partial "sections/projects.html" . }}
     {{ partial "sections/projects-external.html" . }}
