Improve gutters on mobile view in about me section

--- a/assets/src/styles/section/_styles.scss
+++ b/assets/src/styles/section/_styles.scss
@@ -7,7 +7,13 @@
     }
     &.about-me {
         padding: {
-            top: susanoo.rem-calc(180);
+            bottom: 0;
+        }
+        @include susanoo.breakpoint(medium) {
+            padding: {
+                top: susanoo.rem-calc(180);
+            }
+
         }
     }
     .mask {
