--- a/assets/src/styles/about-me/_styles.scss
+++ b/assets/src/styles/about-me/_styles.scss
@@ -127,6 +127,11 @@
         img {
             object-fit: cover;
             width: 100%;
+            opacity: 0;
+            transition: opacity .5s ease-in-out;
+            &.is-revealed {
+                opacity: 1;
+            }
         }
     }
     .section-text {
