--- a/layouts/partials/sections/about-me.html
+++ b/layouts/partials/sections/about-me.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="image-container">
-                        <img src="/logo1.png" alt="{{ .Title }}">
+                        <img src="/logo1.png" alt="{{ .Title }}" data-second-overlay>
                     </div>
                 </div>
             </li>
