Add new images to about us section

--- a/assets/src/styles/about-me/_styles.scss
+++ b/assets/src/styles/about-me/_styles.scss
@@ -123,6 +123,7 @@
             display: none;
         }
         position: relative;
+        height: susanoo.rem-calc(800);
         width: 100%;
         img {
             object-fit: cover;
