--- a/layouts/partials/sections/staging.html
+++ b/layouts/partials/sections/staging.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="mask long-text" data-overlay>
                     <div data-overlay></div>
-                    <h3 class="h5 headline">Hey! I'm Dawid. I'm Fullstack Developer and I create Websites with passion.</h3>
+                    <h3 class="h5 headline">Hey! I'm Dawid. I'm Fullstack Developer and I create websites with passion.</h3>
                 </div>
             </div>
         </div>
